tests/invalid/list_magic_contains_wrong_type/main.py
def run_case() -> None:
    xs: list[int] = [1, 2]
    out: bool = xs.__contains__("bad")


if __name__ == "__main__":
    run_case()
